add bootstrap and some basic styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,3 +7,6 @@
 
 @import "base/base";
 @import "refills/flashes";
+
+// Custom bootstrap variables must be set or imported *before* bootstrap.
+@import "bootstrap";
