--- a/app/views/pages/root.html.erb
+++ b/app/views/pages/root.html.erb
@@ -1,2 +1,17 @@
-<h1>t-shirt wardrobe</h1>
-<a>new garment</a>
+<header>
+  <div class="navbar navbar-dark bg-dark box-shadow">
+    <div class="container d-flex justify-content-between">
+      <a href="#" class="navbar-brand d-flex align-items-center">
+        <strong>Shirt-O!</strong>
+      </a>
+    </div>
+  </div>
+</header>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h1>t-shirt wardrobe</h1>
+      <a class="btn btn-primary">new garment</a>
+    </div>
+  </div>
+</div>
